sticky navbar padding adjustment to avoid jump

--- a/resources/public/css/tooling_styles_v2.css
+++ b/resources/public/css/tooling_styles_v2.css
@@ -100,6 +100,11 @@ form .form-group {
 }
 }
 
+nav.navbar-fixed-top .container {
+  padding-left: 30px;
+}
+
+
 /*
 
 /* navbar background
